--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.thymeleaf.cache=false
 
 
-spring.jpa.database=H2
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url= jdbc:mysql://211.239.124.243:11902/blog?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+#spring.datasource.url=jdbc:h2:file:~/testDB;FILE_LOCK=FS
+spring.datasource.driverClassName= com.mysql.jdbc.Driver
+spring.datasource.username= me3602
+spring.datasource.password= webdudwls33!
+#spring.datasource.sql-script-encoding=utf8
+
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.generate-ddl= false
+spring.jpa.database=mysql
 spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
