--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url= jdbc:mysql://211.239.124.243:11902/blog?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.url= jdbc:mysql://211.239.124.243:11902/apps?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 #spring.datasource.url=jdbc:h2:file:~/testDB;FILE_LOCK=FS
 spring.datasource.driverClassName= com.mysql.jdbc.Driver
 spring.datasource.username= me3602
 spring.datasource.password= webdudwls33!
 #spring.datasource.sql-script-encoding=utf8
 
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.generate-ddl= false
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
+
+tomcat.ajp.port=9090
+tomcat.ajp.remoteauthentication=false
+tomcat.ajp.enabled=true
