--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -51,6 +51,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency> -->
+		
+		<!-- mail -->
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>1.5.6</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>mysql</groupId>
